--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>Discover the Realm of Helldemption.</p>
         </br>
         <h2>Article 1 - Sep 07, 2025</h2>
-        <a href="https://github.com/Brandaloni/therealmreport.github.io/blob/main/20250907%20-%20Drug%20Seizure.html" target="_blank">Illegal drugs seized in first-ever raid of Helldemption Island</a>
+        <a href="20250907 - Drug Seizure.html" target="_blank">Illegal drugs seized in first-ever raid of Helldemption Island</a>
     </div>
 
     </br>
@@ -62,4 +62,5 @@
     </div>
 
 </body>
+
 </html>
