--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>Discover the Realm of Helldemption.</p>
         </br>
         <h2>Article 1 - Sep 07, 2025</h2>
-        <a href="Articles/20250907 - Drug Seizure/article.html">Illegal drugs seized in first-ever raid of Helldemption Island</a>
+        <a href="Articles/20250907 - Drug Seizure/source.html">Illegal drugs seized in first-ever raid of Helldemption Island</a>
     </div>
 
     </br>
@@ -64,6 +64,7 @@
 </body>
 
 </html>
+
 
 
 
