--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="bg-white rounded-lg shadow-xl overflow-hidden md:flex">
                 <div class="md:w-1/2">
                     <a href="Articles/20250907 - Drug Seizure/source.html">
-                        <img src="Images/Article_Photo.png" alt="Illegal drugs seized" class="w-full h-64 md:h-full object-cover">
+                        <img src="Articles/20250907 - Drug Seizure/Images/Article_Photo.png" alt="Illegal drugs seized" class="w-full h-64 md:h-full object-cover">
                     </a>
                 </div>
                 <div class="p-6 md:p-10 md:w-1/2 flex flex-col justify-center">
@@ -66,3 +66,4 @@
 
 </body>
 </html>
+
