--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
     </main>
 
     <footer class="mt-12 py-8 text-center text-sm text-gray-500">
-        <p>&copy; 2025 The Realm Report. All rights reserved. Not responsible for any TNT-related damages.</p>
+        <p>&copy; 2025 The Realm Report. This is parody/entertainment and does not reflect real life.</p>
     </footer>
 
 </body>
 </html>
+
 
